--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ RSS: false
 zhihu_username:     崔鹤洁
 github_username:    HennyJie
 facebook_username:  Hejie Cui
-jianshu_username:   e71990ada2fd
+#jianshu_username:   e71990ada2fd
 #twitter_username:   qiubaiying
 
 
