--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: HeJie's Blog
 SEOTitle: Hejie的博客 | HeJie's Blog
-header-img: img/CuiHejie.jpg
+header-img: img/CuiHejie.JPG
 email: cuihejie331771@gmail.com
 description: "Never say never."
 keyword: "HeJie, HeJie's Blog, 鹤洁的博客, cuihejie, CuiHejie"
