--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ sidebar-avatar: img/githubhead.jpg      # use absolute URL, seeing it's used in 
 
 
 # SNS settings
-RSS: false
+RSS: True
 zhihu_username:     HennyJie
 github_username:    HennyJie
 facebook_username:  Hejie Cui
@@ -55,7 +55,7 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-disqus_username: hejiecui
+disqus_username: HennyJieCC
 
 # Gitalk
 gitalk:
@@ -64,7 +64,8 @@ gitalk:
   clientSecret: 563b1074416b0a4ea97cf9e9cc9a2de22fbd8291    #生成的clientSecret
   repo: HennyJie.github.io    #仓库名称
   owner: HennyJie    #github用户名
-  admin: HennyJie
+  admin: [HennyJie]
+  id: 'window.location.pathname'
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
